--- a/posts/1.6.llm_multimodal.md
+++ b/posts/1.6.llm_multimodal.md
@@ -520,6 +520,13 @@ EM3：[End-to-end training of Multimodal Model and ranking Model](https://arxiv.
 + 猜想2：非扩散的自回归生成
   + 是一种自回归模型，通过多次通过来逐像素地生成图像，而不是像扩散模型那样执行去噪步骤。
 
+## Web-SSL
+
+[CLIP被淘汰了？LeCun谢赛宁新作，多模态训练无需语言监督更强！](https://mp.weixin.qq.com/s/FpisxJQ9AXHV26lHPwzy5A)
+
+[Scaling Language-Free Visual Representation Learning](https://arxiv.org/pdf/2504.01017)
+
+[https://github.com/dfan/webssl](https://github.com/dfan/webssl)
 
 ## 其他
 
