--- a/posts/1.8.llm_o1.md
+++ b/posts/1.8.llm_o1.md
@@ -1167,6 +1167,14 @@ colossalai run --hostfile path-to-host-file --nprocpernode 8 \
 
 # 多模态推理
 
+## 综述
+
+[Rule-based强化学习≠古早逻辑规则！万字拆解o1多模态推理最新进展](https://mp.weixin.qq.com/s/8pwCPuXzXoMJsDmdL9tPGA)
+
+[Aligning Multimodal LLM with Human Preference: A Survey](https://arxiv.org/abs/2503.14504)
+
+
+
 ## 视觉推理
 
 [视觉强化微调！DeepSeek R1技术成功迁移到多模态领域，全面开源](http://mp.weixin.qq.com/s/VCSUQXV7yv9MdIWQlxh7dQ)
