--- a/posts/1.1.pre_llm.md
+++ b/posts/1.1.pre_llm.md
@@ -723,6 +723,68 @@ RTD比MLM**更sample-efficient**，因为RTD只做二分类，而MLM需要做全
 
 俄罗斯套娃嵌入模型旨在将**更重要的信息存储在早期的维度中**，将不太重要的信息存储在后面的维度中。俄罗斯套娃嵌入模型的这一特点允许我们截断模型产生的原始 (大) 嵌入，同时仍保留足够的信息以在下游任务上表现良好。
 
+基本原理：假设是一个L分类的多分类问题，把原来的x先通过F映射到d，然后取前m维出来，再通过W把m映射到L，去和label算loss，再乘以权重c。这么搞几次，相当于搞了多个mlp，把不同的m映射到L。
+
+假设输入一个llm产出的4096维向量，那这个llm就是F，假设是一个2分类问题，期望降维到(64,128,1024)，那就是取前64出来，映射成2维，算个loss，再取前128维出来，映射成2维，算个loss，再取前1024出来，算个loss
+
+但这样比较粗暴，合理的方式是在gpt的建议下，通过如下方式来循序渐进地完成降维：
+
+```python
+multi_stage_cfg = [
+    {"stage": "stage1_high_dim", "dims": [4096, 2048], "weights": [0.7, 0.3]},
+    {"stage": "stage2_mid_dim", "dims": [2048, 1024, 512], "weights": [0.5, 0.3, 0.2]},
+    {"stage": "stage3_low_dim", "dims": [512, 128, 64], "weights": [0.2, 0.3, 0.5]},
+]
+
+def train_stage(model, mrl_dims, mrl_weights, output_dir,
+    train_dataset, eval_dataset, lr=5e-6, bs=32, acc=2, 
+    max_steps=None, stage_name=""):
+    
+    if wandb.run:
+        wandb.finish()  
+    if rank == 0:
+        wandb.init(project="xxx", name=stage_name)
+    loss_fn = losses.MultipleNegativesRankingLoss(model)
+    loss = losses.MatryoshkaLoss(model, loss_fn, 
+        matryoshka_dims=mrl_dims, matryoshka_weights=mrl_weights)
+
+    trainer = SentenceTransformerTrainer(
+        model=model,
+        args=args,
+        train_dataset=train_dataset,
+        eval_dataset=eval_dataset,
+        loss=loss,
+    )
+    trainer.train()
+    # 其他    
+
+def train():
+    for stage_cfg in multi_stage_cfg:
+        if stage_cfg["stage"] == "stage1_high_dim":
+            model = load_model(base_model_path)
+        stage_dir = f"./outputs/{stage_cfg['stage']}"
+        print(f"\n Training {stage_cfg['stage']}... dims={stage_cfg['dims']}")
+        train_stage(
+            model=model,
+            mrl_dims=stage_cfg["dims"],
+            mrl_weights=stage_cfg["weights"],
+            output_dir=stage_dir,
+            stage_name=stage_cfg["stage"],
+            train_dataset=train_dataset,
+            eval_dataset=eval_dataset,
+            lr=5e-6,
+            bs=bs,
+            acc=acc,
+            max_steps=max_steps 
+        )
+        torch.cuda.empty_cache()
+        torch.cuda.synchronize()  
+        gc.collect()
+        model = load_model_continue(stage_dir)
+
+```
+
+
 ![matryoshka-representation-learning](../assets/matryoshka-representation-learning.png)
 
 [https://sbert.net/examples/training/matryoshka/README.html](https://sbert.net/examples/training/matryoshka/README.html)
