--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -12,6 +12,7 @@
 
 [强化学习之父当头一棒：RL版「苦涩的教训」来了！通往ASI，绝非靠人类数据](https://mp.weixin.qq.com/s/MGrSWh-wcBrLKPboUmg05w)
 
+[被《经验时代》刷屏之后，剑桥博士长文讲述RL破局之路](https://mp.weixin.qq.com/s/dLfbu56f02BtQR4bCjzNfw)
 
 # LLM概述
 
