--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -14,6 +14,18 @@
 
 [被《经验时代》刷屏之后，剑桥博士长文讲述RL破局之路](https://mp.weixin.qq.com/s/dLfbu56f02BtQR4bCjzNfw)
 
+
+[生成式AI进入第二幕：交大携手创智学院提出「认知工程」，AI新纪元开始了](https://mp.weixin.qq.com/s/G3WTW2RiYNA6epyQoZZ9Ng)
+
+[Generative AI Act II: Test Time Scaling Drives Cognition Engineering](https://arxiv.org/pdf/2504.13828)
+
+[https://github.com/GAIR-NLP/cognition-engineering](https://github.com/GAIR-NLP/cognition-engineering)
+
+[中文版](https://github.com/GAIR-NLP/cognition-engineering/blob/main/assets/Cognition_Engineering_zh.pdf)，自己转存了[一份](https://github.com/daiwk/collections/blob/master/assets/Cognition_Engineering_zh.pdf)
+
+
+
+
 # LLM概述
 
 PLM（pretrained language models），即bert等
