--- a/posts/1.6.llm_multimodal.md
+++ b/posts/1.6.llm_multimodal.md
@@ -1062,6 +1062,14 @@ torchrun --nproc_per_node=8 generate.py --task t2v-14B \
 
 [Seaweed-7B: Cost-Effective Training of Video Generation Foundation Model](https://arxiv.org/pdf/2504.08685)
 
+## DAM
+
+[英伟达开源「描述一切」模型，拿下7个基准SOTA](https://mp.weixin.qq.com/s/FhARyS4bkqY3A6Z7ihmZcA)
+
+[Describe Anything: Detailed Localized Image and Video Captioning](https://arxiv.org/pdf/2504.16072)
+
+DAM(Describe Anything Model)多模态大语言模型，可以生成图像或视频中特定区域的详细描述。用户可以使用点、框、涂鸦或蒙版来指定区域，DAM将提供这些区域丰富的上下文描述。
+
 ## 其他
 
 [扩散模型与文生视频](https://mp.weixin.qq.com/s/Bh3Gg7FCDpb_AmGEFkxQ2A)
