--- a/posts/1.3.llm_archs.md
+++ b/posts/1.3.llm_archs.md
@@ -664,7 +664,7 @@ kvcache的量化：[https://zhuanlan.zhihu.com/p/691537237](https://zhuanlan.zhi
 
 [https://github.com/vllm-project/vllm](https://github.com/vllm-project/vllm)
 
-(toread)
+[图解Vllm V1系列1：整体流程](https://mp.weixin.qq.com/s/agtNbHsVZ9FuWxyK4Ttvdg)
 
 [Efficient Memory Management for Large Language Model Serving with PagedAttention](https://arxiv.org/pdf/2309.06180.pdf)
 
