--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -907,6 +907,14 @@ item有各种特征，如title、img、id等
 
 。。好像没啥，就是预测未来k个，并且设计了滑动窗口的mask（右下角）
 
+## 华为的UniGRF（没落地）
+
+[Killing Two Birds with One Stone: Unifying Retrieval and Ranking with a Single Generative Recommendation Model](https://arxiv.org/pdf/2504.16454)
+
+[sigir‘25「华为」统一召回+排序框架](https://mp.weixin.qq.com/s/eKU_AlffGR1Lx_wQspuLpQ?poc_token=HEPlGGijUUqAuU1VTCkeSPkWDfZG99B1eN5xtLkh)
+
+
+
 # LLM+推荐：输入文本
 
 ## 华为的KAR（落地）
