--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -2261,6 +2261,13 @@ $$
 |[SLMRec](https://openreview.net/pdf?id=G4wARwjF8M) | 一阶段蒸馏 | teacher和student都拆成多个block，每个block间蒸馏 |
 
 
+## 讨论
+
+我想输入用户历史行为，通过llm产出用户向量（64维的向量），这个向量可以是历史的总结，也可以是预测未来的一些什么东西，最终用在推荐系统的精排模型里，业界有什么好的方法吗
+
+让gpt帮忙深度研究了一下：[https://chatgpt.com/s/dr_6821e54479dc81918c5e4bd61d645894](https://chatgpt.com/s/dr_6821e54479dc81918c5e4bd61d645894)，导出了个[pdf](https://github.com/daiwk/collections/blob/master/assets/llm-gen-user-emb.pdf)
+
+
 # LLM for 检索
 
 ## Gecko
