--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -2265,7 +2265,10 @@ $$
 
 我想输入用户历史行为，通过llm产出用户向量（64维的向量），这个向量可以是历史的总结，也可以是预测未来的一些什么东西，最终用在推荐系统的精排模型里，业界有什么好的方法吗
 
-让gpt帮忙深度研究了一下：[https://chatgpt.com/s/dr_6821e54479dc81918c5e4bd61d645894](https://chatgpt.com/s/dr_6821e54479dc81918c5e4bd61d645894)，导出了个[pdf](https://github.com/daiwk/collections/blob/master/assets/llm-gen-user-emb.pdf)
+让gpt帮忙深度研究了一下：[版本1](https://chatgpt.com/s/dr_6821e54479dc81918c5e4bd61d645894)，[版本2](https://chatgpt.com/s/dr_6821fecfde088191b56c1ed19a3ee999)，
+
+导出了对应的[pdf1](https://github.com/daiwk/collections/blob/master/assets/llm-gen-user-emb.pdf)，[pdf2](https://github.com/daiwk/collections/blob/master/assets/llm-gen-user-emb-64dim.pdf)
+
 
 
 # LLM for 检索
