--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -3238,7 +3238,7 @@ Gemini 2.5 Pro的上下文窗口是1M tokens，并且支持原生多模态：可
 | attn | KV Cache per Token | Capability |
 |-------|---------------------------------|-------|
 | MHA | $$2n_hd_hl$$ | Strong   |
-| GQA | $$2n_gd_h$$ | Moderate  |
+| GQA | $$2n_gd_hl$$ | Moderate  |
 | MQA | $$2d_hl$$  | Weak  |
 | MLA | $$(d_c + d_h^R)l \approx \tfrac{9}{2}d_hl$$ | Stronger |
 
