--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -3258,6 +3258,7 @@ Gemini 2.5 Pro的上下文窗口是1M tokens，并且支持原生多模态：可
 
 + DeepSeekMoE
 
+FFN部分的MoE，相比传统的GShard等MoE架构，DeepSeekMoE用了更细粒度的专家分配机制，并将部分专家设置为共享专家。
 
 
 ## DeepSeek-Prover-V1.5
