--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -14,7 +14,6 @@
 
 [被《经验时代》刷屏之后，剑桥博士长文讲述RL破局之路](https://mp.weixin.qq.com/s/dLfbu56f02BtQR4bCjzNfw)
 
-
 [生成式AI进入第二幕：交大携手创智学院提出「认知工程」，AI新纪元开始了](https://mp.weixin.qq.com/s/G3WTW2RiYNA6epyQoZZ9Ng)
 
 [Generative AI Act II: Test Time Scaling Drives Cognition Engineering](https://arxiv.org/pdf/2504.13828)
@@ -23,7 +22,58 @@
 
 [中文版](https://github.com/GAIR-NLP/cognition-engineering/blob/main/assets/Cognition_Engineering_zh.pdf)，自己转存了[一份](https://github.com/daiwk/collections/blob/master/assets/Cognition_Engineering_zh.pdf)
 
+## 上半场
 
+上半场的游戏：专注于构建新的模型和方法（如Alexnet、transformer、GPT-3），而评估和基准测试（如Imagenet、WMT'14翻译）是次要的。原因：
+
++ 方法比任务更难、更令人兴奋，需要非凡的洞察力和工程能力；而定义任务往往更简单：只是把人类已经做的事情（比如翻译、图像识别或国际象棋）变成基准测试，没有太多洞察力甚至工程能力。
++ 方法也往往比单独的任务更通用、更广泛适用，因此它们特别有价值。
+
+## 方案(the recipe)
+
+在强化学习中，有三个关键组成部分：**算法**、**环境**和**先验知识**。长期以来，强化学习研究人员主要关注**算法**（例如REINFORCE、DQN、actor-critic、PPO、TRPO等），即智能体学习的智力核心，而**将环境和先验知识视为固定或最小化的**。
+
+在深度强化学习时代，环境很重要：如果你忽略环境，你可能会构建一个只在玩具环境中表现出色的“最优”算法。所以，OpenAI设想的就是一旦我们**将所有数字世界变成一个环境**，用聪明的强化学习算法解决它，我们就拥有了数字通用人工智能（AGI），就搞了如下的项目：
+
++ gym：各种游戏的标准强化学习环境
++ World of Bits和Universe项目：将互联网或计算机变成一个游戏。
+
+在GPT-3出现之后，才发现缺失的部分是**先验知识**，需要强大的语言预训练（language pre-training），将一般常识和语言知识提炼到模型中，然后可以对其进行微调。因此，强化学习中最重要的部分可能甚至不是强化学习算法或环境，而是**先验知识**，而这些先验知识可以**通过与强化学习完全无关的方式获得**。
+
+**思考**（thinking，或者说**推理**，reasoning），是一种奇怪的动作（action），它并不直接影响外部世界，而且**推理的空间是开放的、组合上是无限的**。在经典的强化学习理论中，这是一个糟糕的交易，使得决策变得不可能。但是，通过在任何强化学习环境的动作空间中加入推理，我们利用语言预训练的**先验知识来实现泛化**，并且我们可以在不同的决策中使用**灵活的测试时计算**。可以参考论文[ReAct: Synergizing Reasoning and Acting in Language Models](https://arxiv.org/abs/2210.03629)
+
+一旦我们有了正确的强化学习**先验知识（语言预训练）**和**强化学习环境（将语言推理加入到动作中）**，事实证明强化学习**算法可能就是最不重要的部分**了。因此我们有了o系列、R1、深度研究、计算机使用智能体，还有更多即将出现的东西。
+
+## 下半场
+
+上半场的游戏是
+
++ 开发**新的训练方法或模型**，不断**改进基准测试的效果**。
++ 创建**更难的基准测试**，并继续这个循环。
+
+但目前这种游戏正在被破坏，因为：
+
++ 方案本质上已经**标准化并工业化**了，**无需太多的新想法**。一个针对特定任务的新方法可能提升5%，但下一个o系列模型可能没有明确针对这个任务，但能提升30%
++ 即使有更难的基准测试，很快（并且越来越快）它们也会被方案解决，下图是最近5年基准测试的准确率变化情况：
+
+![](../assets/second-half-progress.png)
+
+但问题是：人工智能已经在国际象棋和围棋中击败了世界冠军，在SAT和律师资格考试中超越了大多数人类，并在国际信息学奥林匹克竞赛（IOI）和国际数学奥林匹克竞赛（IMO）中达到了金牌水平。但世界并没有发生太大变化，至少从经济和GDP的角度来看。这个问题可以称为**效用（utility）**问题，根源可能很简单：我们的**评估设置**与**现实世界的设置**在很多基本方式上不同：
+
++ 评估“应该”**自动**运行：通常智能体接收任务输入，自主执行操作，然后接收任务奖励。但现实中，智能体需要**和人类互动**。因此需要新的基准测试，例如：
+    + 将真实人类纳入其中，例如[https://lmarena.ai/](https://lmarena.ai/)
+    + 将用户模拟纳入其中，例如下图的[tau-bench](https://arxiv.org/abs/2406.12045)
+
+![](../assets/tau-bench.png)
+
++ 评估“应该”**独立同分布**（i.i.d.）运行：如果你有一个包含500个任务的测试集，你独立运行每个任务，平均任务指标，然后得到一个总体指标。但现实中，你是**按顺序解决任务**，而不是并行解决。例如一个工程师在越来越熟悉代码库的过程中，会越来越擅长解决具体的代码问题，而目前的评测做不到这一点。所以需要**长期记忆**方法（而且确实有[AGENT WORKFLOW MEMORY](https://arxiv.org/pdf/2409.07429)），但学术界没有合适的基准测试来证明这种需求。
+
+下半场的游戏可能是：
+
++ 开发**针对现实世界效用**的新的评估设置或任务。
++ 用方案解决它们，或者用新组件增强方案。继续这个循环。
+
+上半场的参与者在解决视频游戏和考试，充满了渐进式的方法和模型，而下半场的参与者可以通过构建有用的产品来建立价值数十亿甚至数千亿美元的公司，使用通用方案会轻易击败渐进式方法，除非你创造出打破方案的新假设。
 
 
 # LLM概述
