--- a/posts/1.6.llm_multimodal.md
+++ b/posts/1.6.llm_multimodal.md
@@ -648,6 +648,13 @@ def init_model_and_transform(model_name, base_model_path):
     return model, transform
 ```
 
+## Seed-1.5 embedding
+
+[向量检索能力SOTA，字节Seed1.5-Embedding模型训练细节公开](https://mp.weixin.qq.com/s/gBcUyNxE1aqq_3wXksmOzA)。。没开源
+
++ 设计两阶段对比学习训练流程并精心构造训练数据，充分强化模型的通用表征能力；
++ 从预训练和后训练语料中，构造出推理密集型检索数据（需要深度理解查询和文档的匹配关系，而非简单的字面匹配或语义匹配），并用其优化模型；
++ 使用MoE模型作为基座，并通过MRL训练支持多个向量维度，实现较高的运行速度和灵活的存储开销。
 
 ## 其他
 
