--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -534,13 +534,6 @@ class RQBottleneck(nn.Module):
 
 [Autoregressive Search Engines: Generating Substrings as Document Identifiers](https://arxiv.org/pdf/2204.10628)：例如一个item可以写成```<IDS> 1023 <IDE> Urban Decay Eyeshadow Palette Naked Heat <AS> Makeup <AE> <AS> Eyes <AE>```，并通过wavelet tree存储，给定开始token（如```<IDS>```或者```<AS>```），可以在$$O(Vlog(V))$$里找出所有可能的后续tokens。代码：[https://github.com/facebookresearch/SEAL](https://github.com/facebookresearch/SEAL)
 
-## 美团的MTGR
-
-[MTGR：美团外卖生成式推荐Scaling Law落地实践](https://mp.weixin.qq.com/s/JiDOqD-ThU0Upp6xnNg3Nw)
-
-听说是替换了精排
-
-
 ## 百度的COBRA
 
 [Sparse Meets Dense: Unified Generative Recommendations with Cascaded Sparse-Dense Representations](https://arxiv.org/abs/2503.02453)
@@ -919,7 +912,31 @@ item有各种特征，如title、img、id等
 
 [sigir‘25「华为」统一召回+排序框架](https://mp.weixin.qq.com/s/eKU_AlffGR1Lx_wQspuLpQ?poc_token=HEPlGGijUUqAuU1VTCkeSPkWDfZG99B1eN5xtLkh)
 
+## 美团的MTGR
 
+[MTGR：美团外卖生成式推荐Scaling Law落地实践](https://mp.weixin.qq.com/s/JiDOqD-ThU0Upp6xnNg3Nw)
+
+听说是替换了精排
+
+## 阿里的SORT-Gen（落地）
+
+[sigir'25「淘宝」多目标重排｜A Generative Re-ranking Model for List-level](https://mp.weixin.qq.com/s/b0PdyR4bFUXhLj9dToBK5A)
+
+[A Generative Re-ranking Model for List-level Multi-objective Optimization at Taobao](https://arxiv.org/pdf/2505.07197)
+
+将用户的所有行为聚合成一条样本。每个行为包括四个方面：用户侧、位置、商品侧、精排打分，将行为序列送入tansformer中。
+
+保序回归损失
+
+生成方法：先设计不同的rankscore得到多路序列候选，再比较每一路的top1，决定召回哪一路。
+
+纯价值驱动的列表生成可能有同质化的风险，导致多样性降低。引入相似度惩罚：
+
+## 小红书的RankGPT
+
+[小红书RankGPT:推荐系统生成式精排的落地实践](https://mp.weixin.qq.com/s/2D31iyO07DNdTBPdHp-3Qw)
+
+[Towards Large-scale Generative Ranking](https://arxiv.org/abs/2505.04180)
 
 # LLM+推荐：输入文本
 
@@ -2028,6 +2045,12 @@ infer照理说应该是得到emb，然后去ann，但代码里偷懒了直接拿
 
 [https://github.com/microsoft/RecAI](https://github.com/microsoft/RecAI)
 
+新的一篇
+
+[Avoid Recommending Out-of-Domain Items: Constrained Generative Recommendation with LLMs](https://arxiv.org/pdf/2505.03336)
+
++ RecLM-ret通过检索机制，从域数据集中找到最相关的item
++ RecLM-cgen则使用约束生成策略，限制模型仅生成域内的item标题。
 
 
 ## Google的STAR
@@ -2545,3 +2568,113 @@ def unified_model_forward(model, model_type: str, inputs: dict, normalize_emb: b
 ## gemini embedding
 
 [Gemini Embedding: Generalizable Embeddings from Gemini](https://arxiv.org/pdf/2503.07891)
+
+## BGE-code/VL
+
+[代码、多模态检索全面登顶SOTA！智源BGE向量模型三连击，并全面开放](https://mp.weixin.qq.com/s/DYGix_6Zf7M50aC8TtpQKg)
+
++ BGE-code：[Towards A Generalist Code Embedding Model Based On Massive Data Synthesis](https://arxiv.org/abs/2505.12697)
++ BGE-VL：[MegaPairs: Massive Data Synthesis For Universal Multimodal Retrieval](https://arxiv.org/abs/2412.14475)
++ BGE-VL-screenshot：[Any Information Is Just Worth One Single Screenshot: Unifying Search With Visualized Information Retrieval](https://arxiv.org/abs/2502.11431)
+
+## UniME
+
+[Breaking the Modality Barrier: Universal Embedding Learning with Multimodal LLMs](https://arxiv.org/pdf/2504.17432)
+
+### 阶段一：文本判别知识蒸馏
+
+![](../assets/unime-text-distill.png)
+
+用纯文本数据来增强MLLM中LLM的嵌入能力，用了273k个句子对。
+
++ teacher：基于LLM的嵌入模型NV-Embed V2（对比训练中移除了causal mask）离线批量产出文本的emb
++ student：MLLM中把LLM部分剥离出来，输入prompt ```Summary the above sentences in one word: \n”```，最后一个token的emb当成输出
++ 蒸馏：teacher和student间算KL散度，LoRA训练
+
+推理时：
+
++ 单模态输入：通过prompt的设置，决定只走对应的vision/text encoder
++ 图片+文字输入：通过prompt，各自过模型，然后把输出的2个emb进行融合 
+
+### 阶段二：困难负样本增强指令微调
+
+![](../assets/unime-img.png)
+
+拿多模态的样本对来提升图文之间的对齐，用了662k个pair对：
+
++ query: img+prompt
++ doc: img
+
+样本处理：
+
++ 干掉false negative：有些负样本和query的相似度太高了，干掉
++ 增加hard negative：除了正例和前面的false negative外，在负样本里找出k个和query最像的，当成hard negative
+
+loss是infoNCE，然后用QLoRA来微调
+
+代码：
+
+```python
+import torch
+from PIL import Image
+from torch.nn import functional as F
+from self_evaluate.utils.utils import init_model_and_transform
+
+model_name = "phi35V"
+base_model_path="DeepGlint-AI/UniME-Phi3.5-V-4.2B"
+# model_name = "llava_16"
+# base_model_path="DeepGlint-AI/UniME-LLaVA-1.6-7B"
+
+if model_name == "phi35V":
+    img_prompt = '<|user|>\n<|image_1|>\nSummary above image in one word: <|end|>\n<|assistant|>\n'
+    text_prompt = '<|user|>\n<sent>\nSummary above sentence in one word: <|end|>\n<|assistant|>\n'
+elif model_name == "llava_16":
+    img_prompt = "[INST] <image>\nSummary above image in one word: [/INST]"
+    text_prompt = "[INST] <sent>\nSummary above sentence in one word: [/INST]"
+
+text = "A man is crossing the street with a red car parked nearby."
+image_path = "figures/demo.png"
+input_texts = text_prompt.replace('<sent>', text)
+input_image_prompt = img_prompt
+input_image = [Image.open(image_path)]
+
+model, transform = init_model_and_transform(model_name, base_model_path)
+inputs_text = transform(text=input_texts,
+                    images=None,
+                    return_tensors="pt", 
+                    padding=True)
+for key in inputs_text: inputs_text[key] = inputs_text[key].to("cuda")
+inputs_image = transform(text=input_image_prompt,
+                    images=input_image, 
+                    return_tensors="pt", 
+                    padding=True).to("cuda")
+
+with torch.no_grad():
+  emb_text = model(**inputs_text, output_hidden_states=True, return_dict=True).hidden_states[-1][:, -1, :]
+  emb_image = model(**inputs_image, output_hidden_states=True, return_dict=True).hidden_states[-1][:, -1, :]
+  emb_text = F.normalize(emb_text, dim=-1)
+  emb_image = F.normalize(emb_image, dim=-1)
+  Score = emb_image @ emb_text.T
+print("Score: ", Score) # Score: 0.59
+```
+
+其中：
+
+```python
+def init_model_and_transform(model_name, base_model_path): 
+    if model_name == 'phi35V':
+        transform = AutoProcessor.from_pretrained("microsoft/Phi-3.5-vision-instruct", 
+        trust_remote_code=True)
+        model = AutoModelForCausalLM.from_pretrained(base_model_path,
+                            device_map="cuda", trust_remote_code=True,
+                            torch_dtype=torch.float16, 
+                            _attn_implementation='flash_attention_2')
+    elif model_name == "llava_16": 
+        transform = LlavaNextProcessor.from_pretrained("llava-hf/llava-v1.6-mistral-7b-hf")
+        model = LlavaNextForConditionalGeneration.\
+          from_pretrained(base_model_path, device_map="cuda", 
+            torch_dtype=torch.float16, low_cpu_mem_usage=True) 
+    transform.tokenizer.padding_side = "left"
+    transform.tokenizer.padding = True
+    return model, transform
+```
