--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -3875,6 +3875,41 @@ print(responses)
 
 [https://huggingface.co/Qwen/WorldPM-72B](https://huggingface.co/Qwen/WorldPM-72B)
 
+## QwenLong-L1
+
+[强化学习解决长上下文推理问题：通义推出QwenLong-L1-32B](https://mp.weixin.qq.com/s/Q97BFZ79Ykczz3RSueIXHQ)
+
+[https://github.com/Tongyi-Zhiwen/QwenLong-L1](https://github.com/Tongyi-Zhiwen/QwenLong-L1)
+
+[https://huggingface.co/Tongyi-Zhiwen/QwenLong-L1-32B](https://huggingface.co/Tongyi-Zhiwen/QwenLong-L1-32B)
+
+[QwenLong-L1: Towards Long-Context Large Reasoning Models with Reinforcement Learning](https://www.arxiv.org/abs/2505.17667)
+
+长上下文推理强化学习范式中的两个核心挑战：
+
++ 次优的训练效率：
+    + 奖励收敛较慢
+    + 模型输出熵的显著降低，限制了优化过程中的探索行为。
++ 不稳定的优化过程
+    + KL散度突刺较多
+    + 这是由于较长的输出长度和不均匀的输入长度导致方差变大，导致策略更新不稳定。
+
+QwenLong-L1：
+
+![](../assets/qwenlong-l1.png)
+
++ 渐进式上下文扩展：
+    + 监督微调预热（Warm-Up Supervised Fine-Tuning）：使用蒸馏的长上下文推理数据来sft模型，获取稳定的初始策略，降低训练过程中的不稳定。 
+    + 课程引导的分阶段强化学习（Curriculum-Guided Phased Reinforcement Learning）：将强化学习训练分为两阶段，每阶段仅训练当前长度区间的样本，避免混合长度导致的优化冲突。
+        + 阶段1：输入长度20K
+        + 阶段2：扩展至60K，逐步适应长上下文。
+    + 难度感知的回顾采样（Difficulty-Aware Retrospective Sampling）：根据样本平均奖励动态计算难度，低奖励样本（高难度）被优先保留至后续阶段。阶段2训练时，包含阶段1的高难度样本，强制模型持续探索复杂case。 
++ 混合奖励机制：
+    + 规则奖励：与标准答案严格匹配，确保答案格式正确性，防止Reward Hacking。
+    + 模型评判：用Qwen2.5-1.5B-Instruct作为轻量级评判模型，评估预测答案和标准答案之间语义等价性。
+    + 组合策略：取规则与模型评判的最大值，兼顾精确性与答案多样性。
+
+
 # Kimi系列
 
 ## MOBA
@@ -4049,4 +4084,16 @@ $$
 [长视频理解新突破！Mamba混合架构让显存消耗腰斩，处理10万视频token不费力](https://mp.weixin.qq.com/s/eGBF_jJqmpwNT6D-t0BK5Q)
 
 [VAMBA: Understanding Hour-Long Videos with Hybrid Mamba-Transformers](https://arxiv.org/pdf/2503.11579)
+
+# agentic AI
+
+[再见AI Agents，你好Agentic AI！](https://mp.weixin.qq.com/s/5_pjJLo5zDCwygcgM4A6xQ)
+
+[AI Agents vs. Agentic AI: A Conceptual Taxonomy, Applications and Challenges](https://arxiv.org/pdf/2505.10468)
+
++ 定义：AI Agents是执行特定任务的自主软件程序，而Agentic AI是多个AI代理协作以实现复杂目标的系统。
++ 自主性水平：AI Agents在其特定任务内具有高自主性，而Agentic AI具有更高的自主性，能够管理多步骤、复杂的任务。
++ 任务复杂性：AI Agents通常处理单一、特定的任务，而Agentic AI处理需要协作的复杂、多步骤任务。
++ 协作：AI Agents独立运行，而Agentic AI涉及多智能体协作和信息共享。
++ 学习和适应能力：AI Agents在特定领域内学习和适应，而Agentic AI在更广泛的范围和环境中学习和适应。
 
